# Relevant-XKCD-Bot

./: .gitignore  Dockerfile  Makefile  README.md  schema.sql  xkcdbot.install  xkcdbot.opam
bot/: comics_provider.ml  jbuild  main.ml  xkcd_provider.ml
indexer/: comics_indexer.ml  indexer.ml  jbuild  xkcd_indexer.ml
src/: crawler.ml  jbuild  main.ml
