opam-version: "1.2"
maintainer: "mail@pierluigi.me"
authors: ["pNre"]
homepage: "https://github.com/pNre/relevant-xkcd-bot"
bug-reports: "https://github.com/pNre/relevant-xkcd-bot/issues"
dev-repo: "https://github.com/pNre/relevant-xkcd-bot.git"

build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]

depends: [
  "jbuilder" {build & >= "1.0+beta14"}
]
